--- a/articles/static-web-apps/index.yml
+++ b/articles/static-web-apps/index.yml
@@ -1,20 +1,20 @@
 ### YamlMime:Landing
 title: Azure 静态 Web 应用文档
-summary: 使用 Azure 静态 Web 应用，可以构建自动根据 GitHub 中所做的更改发布的 JavaScript Web 应用程序。
+summary: 借助 Azure Static Web Apps，可构建自动根据 GitHub 中所作的更改发布的新式 Web 应用程序。
 metadata:
   title: Azure 静态 Web 应用文档
-  description: 使用 Azure 静态 Web 应用，可以构建自动根据 GitHub 中所做的更改发布的 JavaScript Web 应用程序。
+  description: 借助 Azure Static Web Apps，可构建自动根据 GitHub 中所作的更改发布的新式 Web 应用程序。
   ms.topic: landing-page
   ms.service: static-web-apps
   author: craigshoemaker
   ms.author: cshoe
   ms.date: 04/09/2020
-  ms.openlocfilehash: f70a746c948038b5bd67f4645e8dbd3df71b8b8a
-  ms.sourcegitcommit: 3543d3b4f6c6f496d22ea5f97d8cd2700ac9a481
+  ms.openlocfilehash: a72c9ab1dfcaf6fd95ac706bc0f0a7b8adb17c0f
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 07/20/2020
-  ms.locfileid: "86528649"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90905351"
 landingContent:
 - title: 关于静态 Web 应用
   linkLists:
@@ -54,6 +54,8 @@ landingContent:
       url: publish-vuepress.md
     - text: 从 Jekyll 发布
       url: publish-jekyll.md
+    - text: 从 Blazor 部署
+      url: deploy-blazor.md
     - text: 从 Next.js 部署
       url: deploy-nextjs.md
     - text: 从 Nuxt.js 部署
