commit translated contents

--- a/articles/machine-learning/index.yml
+++ b/articles/machine-learning/index.yml
@@ -13,22 +13,24 @@ metadata:
   ms.author: jmartens
   ms.date: 09/17/2020
   ms.custom: contperfq1
-  ms.openlocfilehash: c103b04fff2cc0b1d5b804c16f98e63fd1aa3e87
-  ms.sourcegitcommit: 1fe5127fb5c3f43761f479078251242ae5688386
+  ms.openlocfilehash: 4359f18e51dffa26f1bfc7fbe74f5f89dff7c56f
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/14/2020
-  ms.locfileid: "90068279"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90900123"
 landingContent:
 - title: 入门：代码优先
   linkLists:
   - linkListType: tutorial
     links:
-    - text: 入门 (Python)
+    - text: 开始使用 Python SDK（第 1 天）
+      url: tutorial-1st-experiment-sdk-setup-local.md
+    - text: 使用 Jupyter Notebook
       url: tutorial-1st-experiment-sdk-setup.md
     - text: 使用 ML 管道的批量推理 (Python)
       url: tutorial-pipeline-batch-scoring-classification.md
-    - text: 入门 (R)
+    - text: R 入门
       url: tutorial-1st-r-experiment.md
 - title: 入门：低代码或无代码
   linkLists:
