--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -12,12 +12,12 @@ metadata:
   manager: nitinme
   ms.custom: custom-portals-hub
   ms.date: 08/28/2020
-  ms.openlocfilehash: fac52ac6cc7018d2ddcaedd663abf26275f4929e
-  ms.sourcegitcommit: 656c0c38cf550327a9ee10cc936029378bc7b5a2
+  ms.openlocfilehash: 1500ac7ac362048751be3f91e6c52d4fe446bdc2
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/28/2020
-  ms.locfileid: "89074689"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90906974"
 highlightedContent:
   items:
   - title: 什么是认知服务？
@@ -99,10 +99,13 @@ conceptualContent:
     links:
     - url: ./anomaly-detector/index.yml
       itemType: overview
-      text: 异常探测器（预览版）
+      text: 异常检测器
     - url: ./content-moderator/index.yml
       itemType: overview
       text: 内容审查器
+    - url: ./metrics-advisor/index.yml
+      itemType: overview
+      text: 指标顾问（预览版）
     - url: ./personalizer/index.yml
       itemType: overview
       text: 个性化体验创建服务
@@ -157,7 +160,7 @@ additionalContent:
         url: https://godoc.org/github.com/Azure/azure-sdk-for-go/services/cognitiveservices
       - text: Java
         url: https://docs.microsoft.com/java/api/overview/azure/cognitiveservices/client?view=azure-java-stable
-      - text: JavaScript
+      - text: Javascript
         url: https://docs.microsoft.com/javascript/api/overview/azure/cognitive-services?view=azure-node-latest
       - text: Python
         url: https://docs.microsoft.com/python/api/overview/azure/cognitive-services?view=azure-python
