--- a/articles/security-center/index.yml
+++ b/articles/security-center/index.yml
@@ -11,45 +11,51 @@ metadata:
   author: memildin
   ms.author: memildin
   ms.date: 08/17/2020
-  ms.openlocfilehash: d87e86bc1e4795be4e234cba06ddd9ab663ba3f8
-  ms.sourcegitcommit: c94a177b11a850ab30f406edb233de6923ca742a
+  ms.openlocfilehash: 0ee97ba1d0190cfb3331372329677b8ffe740439
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 09/01/2020
-  ms.locfileid: "89276858"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90883845"
 landingContent:
 - title: 关于安全中心
   linkLists:
   - linkListType: overview
     links:
     - text: 安全中心的主要功能是什么？
-      url: security-center-intro.md
+      url: security-center-introduction.md
     - text: 哪些版本的 Windows Server 和 Linux 受支持？
       url: security-center-os-coverage.md
+    - text: 什么是 Azure Defender？
+      url: azure-defender.md
 - title: 了解最新功能
   linkLists:
   - linkListType: whats-new
     links:
     - text: 安全中心的发行说明
       url: release-notes.md
-    - text: 使用资产清单管理资源
-      url: asset-inventory.md
-    - text: 重新编写的自适应应用程序控制页面
-      url: security-center-adaptive-application.md
-    - text: 新安全控制的完整说明
-      url: secure-score-security-controls.md#security-controls-and-their-recommendations
+    - text: 浏览新的概述页面
+      url: overview-page.md
+    - text: 保护 Kubernetes 工作负载
+      url: kubernetes-workload-protections.md
+    - text: 响应适用于 Key Vault 的 Azure Defender 警报
+      url: defender-for-key-vault-usage.md
     - text: 安全分数 API
       url: secure-score-security-controls.md#get-your-secure-score-from-the-rest-api
 - title: 入门
   linkLists:
   - linkListType: get-started
     links:
+    - text: 安全中心入门
+      url: security-center-get-started.md
     - text: 配置安全策略
       url: tutorial-security-policy.md
     - text: 评估安全状况
       url: secure-score-security-controls.md
-    - text: 升级到高级安全
-      url: security-center-onboarding.md
+    - text: 连接到你的 AWS 帐户
+      url: quickstart-onboard-aws.md
+    - text: 连接到你的 GCP 帐户
+      url: quickstart-onboard-gcp.md
 - title: 提高安全分数
   linkLists:
   - linkListType: how-to-guide
@@ -58,8 +64,8 @@ landingContent:
       url: secure-score-security-controls.md
     - text: 修正安全建议
       url: security-center-remediate-recommendations.md
-    - text: 自定义安全建议
-      url: tutorial-security-policy.md
+    - text: 从建议中免除资源
+      url: exempt-resource.md
     - text: 使用建议增强安全性
       url: security-center-using-recommendations.md
     - text: 使用安全分数 API 进行跟踪
@@ -74,3 +80,7 @@ landingContent:
       url: security-center-adaptive-application.md
     - text: 实现自适应网络强化
       url: security-center-adaptive-network-hardening.md
+    - text: 免费试用 Azure Defender 30 天
+      url: security-center-pricing.md#try-azure-defender-free-for-30-days
+    - text: 使用 Azure Defender 仪表板
+      url: azure-defender-dashboard.md
