commit translated contents

--- a/articles/availability-zones/TOC.yml
+++ b/articles/availability-zones/TOC.yml
@@ -95,6 +95,10 @@
       items:
         - name: 什么是 Edge Zones？
           href: ../networking/edge-zones-overview.md
+    - name: Azure Orbital 文档
+      items:
+        - name: 什么是 Azure Orbital？
+          href: ../networking/azure-orbital-overview.md
 - name: 灾难恢复
   items:
     - name: 使用 Azure Site Recovery
