--- a/articles/postgresql/index.yml
+++ b/articles/postgresql/index.yml
@@ -1,19 +1,19 @@
 ### YamlMime:Landing
 title: Azure Database for PostgreSQL 文档
-summary: 用于 PostgreSQL 的 Azure 数据库是基于开源 Postgres 数据库引擎的关系型数据库服务。 它是完全托管的数据库即服务产品，能够处理任务关键型工作负荷，具有可预测的性能、安全性、高可用性和动态可伸缩性。 它有两种部署方式，一种是作为单一服务器部署，一种是作为超大规模 (Citus) 群集部署。 “超大规模(Citus)”选项可以使用分片跨多个计算机来水平缩放查询，为需要较大的规模和较高的性能的应用程序提供服务。 参考我们的快速入门、教程和示例了解如何使用用于 PostgreSQL 的 Azure 数据库。
+summary: 用于 PostgreSQL 的 Azure 数据库是基于开源 Postgres 数据库引擎的关系型数据库服务。 它是完全托管的数据库即服务，能够处理任务关键型工作负荷，具有可预测的性能、安全性、高可用性和动态可伸缩性。
 metadata:
   description: Azure Database for PostgreSQL 是 Microsoft 云中的关系型数据库服务，它基于开源 PostgreSQL 数据库引擎，专为开发人员而构建。
   author: rachel-msft
   ms.author: raagyema
-  ms.date: 08/30/2019
+  ms.date: 09/21/2020
   ms.service: postgresql
   ms.topic: landing-page
-  ms.openlocfilehash: 432dfe4e7907d8599dd9655a3e3eb67987ea6f39
-  ms.sourcegitcommit: 2ffa5bae1545c660d6f3b62f31c4efa69c1e957f
+  ms.openlocfilehash: c14cab875ab017feb913269e277e8b5c12a3ee08
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 08/11/2020
-  ms.locfileid: "88078013"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90895644"
 landingContent:
 - title: 关于 Azure Database for PostgreSQL
   linkLists:
@@ -25,73 +25,87 @@ landingContent:
     links:
     - text: 查看我们的博客
       url: https://techcommunity.microsoft.com/t5/Azure-Database-for-PostgreSQL/bg-p/ADforPostgreSQL
-- title: 创建单一服务器
+- title: 单个服务器
   linkLists:
+  - linkListType: overview
+    links:
+    - text: 什么是单服务器？
+      url: concepts-servers.md
+    - text: 查看所有单服务器文档
+      url: single-server/index.yml
   - linkListType: quickstart
     links:
     - text: 使用 Azure 门户创建服务器
       url: quickstart-create-server-database-portal.md
     - text: 使用 Azure CLI 创建服务器
       url: quickstart-create-server-database-azure-cli.md
-  - linkListType: learn
-    links:
-    - text: 学习模块：创建 Azure Database for PostgreSQL 服务器
-      url: /learn/modules/create-azure-db-for-postgresql-server/
   - linkListType: concept
     links:
-    - text: 定价层
-      url: concepts-pricing-tiers.md
+    - text: 服务器概念
+      url: concepts-servers.md
     - text: 限制
       url: concepts-limits.md
-    - text: PostgreSQL 版本
-      url: concepts-supported-versions.md
-    - text: PostgreSQL 扩展 - 单一服务器
-      url: concepts-extensions.md
   - linkListType: tutorial
     links:
-    - text: 使用 Azure 门户设计数据库
+    - text: 在单服务器上设计数据库
       url: tutorial-design-database-using-azure-portal.md
-    - text: 使用 Azure CLI 设计数据库
-      url: tutorial-design-database-using-azure-cli.md
-    - text: 使用 Python 和 CLI 生成 Web 应用
+    - text: 通过 PostgreSQL 生成 Python (Django) 应用
       url: ../app-service/tutorial-python-postgresql-app.md?toc=%2fazure%2fpostgresql%2ftoc.json
-    - text: 监视和优化服务
+    - text: 监视和优化服务器
       url: tutorial-monitor-and-tune.md
-- title: 创建超大规模 (Citus) 群集
+- title: 灵活服务器（预览版）
   linkLists:
+  - linkListType: overview
+    links:
+    - text: 什么是灵活服务器？
+      url: flexible-server/overview.md
+    - text: 查看所有灵活服务器文档
+      url: flexible-server/index.yml
+  - linkListType: concept
+    links:
+    - text: 服务器概念
+      url: flexible-server/concepts-servers.md
+    - text: 了解计算和存储
+      url: flexible-server/concepts-compute-storage.md
+    - text: 限制
+      url: flexible-server/concepts-limits.md
   - linkListType: quickstart
     links:
-    - text: 在 Azure 门户中创建超大规模 (Citus) 群集
-      url: quickstart-create-hyperscale-portal.md
+    - text: 使用门户创建服务器
+      url: flexible-server/quickstart-create-server-portal.md
+    - text: 使用 ARM 模板创建服务器
+      url: flexible-server/quickstart-create-server-arm-template.md
   - linkListType: tutorial
     links:
-    - text: 设计多租户数据库
-      url: tutorial-design-database-hyperscale-multi-tenant.md
-    - text: 设计实时数据库
-      url: tutorial-design-database-hyperscale-realtime.md
+    - text: 在虚拟网络中创建应用和数据库服务器
+      url: flexible-server/tutorial-webapp-server-vnet.md
+- title: 超大规模 (Citus) 群集
+  linkLists:
+  - linkListType: overview
+    links:
+    - text: 什么是超大规模？
+      url: concepts-hyperscale-nodes.md
+    - text: 查看所有超大规模文档
+      url: hyperscale/index.yml
   - linkListType: concept
     links:
     - text: PostgreSQL 扩展 - 超大规模
       url: concepts-hyperscale-extensions.md
-    - text: 了解节点
-      url: concepts-hyperscale-nodes.md
     - text: 了解分布式数据
       url: concepts-hyperscale-distributed-data.md
-    - text: 配置性能选项
-      url: concepts-hyperscale-configuration-options.md
-    - text: 高可用性
-      url: concepts-hyperscale-high-availability.md
-- title: 连接到单一服务器
+  - linkListType: quickstart
+    links:
+    - text: 在 Azure 门户中创建超大规模 (Citus) 群集
+      url: quickstart-create-hyperscale-portal.md
+- title: 连接和查询
   linkLists:
   - linkListType: concept
     links:
-    - text: 了解防火墙
+    - text: 启用防火墙规则以进行连接
       url: concepts-firewall-rules.md
-    - text: 创建防火墙规则
-      url: howto-manage-firewall-using-portal.md
-    - text: 配置 SSL
+    - text: 为安全连接配置 SSL
       url: concepts-ssl-connection-security.md
-  - linkListType: get-started
+  - linkListType: quickstart
     links:
     - text: 使用 Python 进行连接
       url: connect-python.md
@@ -107,35 +121,35 @@ landingContent:
       url: connect-csharp.md
     - text: 使用 Go 进行连接
       url: connect-go.md
-- title: 使用编程 API 编写代码
+- title: 应用程序开发
   linkLists:
-  - linkListType: get-started
+  - linkListType: concept
+    links:
+    - text: 连接复原
+      url: concepts-connectivity.md
+  - linkListType: tutorial
+    links:
+    - text: 在单服务器上设计数据库
+      url: /tutorial-design-database-using-azure-portal.md               -
+    - text: 使用超大规模设计多租户数据库
+      url: tutorial-design-database-hyperscale-multi-tenant.md
+    - text: 使用超大规模设计实时数据库
+      url: tutorial-design-database-hyperscale-realtime.md
+- title: 参考
+  linkLists:
+  - linkListType: learn
+    links:
+    - text: 学习模块：创建 Azure Database for PostgreSQL 服务器
+      url: /learn/modules/create-azure-db-for-postgresql-server/
+  - linkListType: deploy
     links:
     - text: 用于常见任务的 Azure CLI 脚本
       url: /azure/postgresql/sample-scripts-azure-cli
+    - text: Azure 资源管理器模板
+      url: /azure/templates/microsoft.dbforpostgresql/allversions
   - linkListType: reference
     links:
     - text: Azure CLI 开发人员参考
       url: /rest/api/postgresql/
     - text: REST API 开发人员参考
       url: /cli/azure/postgres
-    - text: Azure 资源管理器模板
-      url: /azure/templates/microsoft.dbforpostgresql/allversions
-- title: 备份和迁移数据
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: 在单一服务器中备份和还原
-      url: concepts-backup.md
-  - linkListType: how-to-guide
-    links:
-    - text: 使用 Azure 门户还原服务器
-      url: howto-restore-server-portal.md
-    - text: 使用 Azure CLI 还原服务器
-      url: howto-restore-server-cli.md
-    - text: 使用转储和还原迁移数据库
-      url: howto-migrate-using-dump-and-restore.md
-    - text: 使用导出和导入功能迁移数据库
-      url: howto-migrate-using-export-and-import.md
-    - text: 停机时间最短的迁移
-      url: howto-migrate-online.md
