--- a/articles/static-web-apps/TOC.yml
+++ b/articles/static-web-apps/TOC.yml
@@ -2,7 +2,7 @@
   href: index.yml
 - name: 概述
   items:
-    - name: 关于 Static Web Apps
+    - name: 关于静态 Web 应用
       href: overview.md
 - name: 快速入门
   expanded: true
@@ -56,6 +56,8 @@
           href: publish-jekyll.md
     - name: 从框架部署
       items:
+        - name: Blazor
+          href: deploy-blazor.md
         - name: Next.js
           href: deploy-nextjs.md
         - name: Nuxt.js
