commit translated contents

--- a/articles/azure-sql-edge/index.yml
+++ b/articles/azure-sql-edge/index.yml
@@ -1,21 +1,21 @@
 ### YamlMime:Landing
-title: Azure SQL Edge（预览版）文档
+title: Azure SQL Edge 文档
 summary: Azure SQL Edge 是已针对 IoT 和边缘部署进行了优化的关系数据库引擎。
 metadata:
-  title: Azure SQL Edge（预览版）文档
-  meta.description: Learn how to use Azure SQL Edge (Preview).
+  title: Azure SQL Edge 文档
+  meta.description: Learn how to use Azure SQL Edge.
   services: sql-edge
   ms.service: sql-edge
   ms.topic: landing-page
   author: stevestein
   ms.author: sstein
   ms.date: 05/19/2020
-  ms.openlocfilehash: 97595cd74fa5a584d5d1943ed88ac617fc742569
-  ms.sourcegitcommit: f1132db5c8ad5a0f2193d751e341e1cd31989854
+  ms.openlocfilehash: 3a043b3e29352abd44d1b880f366d9fa8ccea4d2
+  ms.sourcegitcommit: 53acd9895a4a395efa6d7cd41d7f78e392b9cfbe
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/31/2020
-  ms.locfileid: "84233197"
+  ms.lasthandoff: 09/22/2020
+  ms.locfileid: "90894470"
 landingContent:
 - title: SQL Edge
   linkLists:
@@ -25,8 +25,14 @@ landingContent:
       url: overview.md
   - linkListType: deploy
     links:
-    - text: 部署 SQL Edge
+    - text: 使用门户部署 SQL Edge
       url: deploy-portal.md
+    - text: 通过 Docker 部署 SQL Edge
+      url: disconnected-deployment.md
+  - linkListType: tutorial
+    links:
+    - text: 在 Kubernetes 中部署
+      url: deploy-kubernetes.md
 - title: 同步数据
   linkLists:
   - linkListType: tutorial
@@ -43,6 +49,8 @@ landingContent:
       url: stream-data.md
     - text: 流式处理目录视图
       url: streaming-catalog-views.md
+    - text: 创建和管理流式处理作业
+      url: create-stream-analytics-job.md
 - title: 机器学习
   linkLists:
   - linkListType: concept
@@ -53,3 +61,21 @@ landingContent:
     links:
     - text: 在 SQL Edge 上部署 ONNX
       url: deploy-onnx.md
+- title: 时序数据处理
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: 输入缺失值
+      url: imputing-missing-values.md
+    - text: 数据保留策略
+      url: data-retention-overview.md
+    - text: Date_Bucket (Transact-SQL)
+      url: date-bucket-tsql.md
+- title: 配置 SQL Edge
+  linkLists:
+  - linkListType: concept
+    links:
+    - text: 配置 SQL Edge
+      url: configure.md
+    - text: 配置复制
+      url: configure-replication.md
